# uv-project-management

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  train.py
docs/: branching_strategy.md  git_size_limits.md  lfs_quota_issues.md  pr_workflow.md
models/: test_model.pkl  wrong_model.pkl
scripts/: check_quality.sh  experiment_xgboost.py
src/churn_prediction/: test_precommit.py
src/churn_prediction/data/: loader.py
src/churn_prediction/evaluation/: metrics.py
src/churn_prediction/features/: engineering.py
src/churn_prediction/models/: predict.py  train.py
src/customer_churn_prediction/: __init__.py
tests/unit/: test_data_loader.py  test_features.py  test_predict.py
